[gd_scene load_steps=27 format=3 uid="uid://dx4bxusk8cg17"]

[ext_resource type="Script" uid="uid://cbucyqaf6w4t2" path="res://Script/script_MainMenu.gd" id="1_tt5f1"]
[ext_resource type="PackedScene" uid="uid://knfvtmq4hu7k" path="res://Scenes/Level/levelScene_level1.tscn" id="2_ritqm"]
[ext_resource type="Script" uid="uid://km52vv3xsef" path="res://Script/script_mainmenu_ship.gd" id="2_xim88"]
[ext_resource type="PackedScene" uid="uid://ckpm66veavaxh" path="res://Scenes/Mainmenu/LevelChoiceMenu.tscn" id="3_aaq5r"]
[ext_resource type="Script" uid="uid://dtfl30wcm21jt" path="res://Script/script_mainmenu_chimney.gd" id="3_df05h"]
[ext_resource type="Texture2D" uid="uid://c4af8jpkhi7w4" path="res://Art/UI/MainMenu/MainMene_Ship.png" id="3_ghw46"]
[ext_resource type="Texture2D" uid="uid://by6350lhwumst" path="res://Art/UI/artWeaponDepthChargeProjectorMark6.jpg" id="4_8um5k"]
[ext_resource type="PackedScene" uid="uid://f6780xsmgc76" path="res://Scenes/Mainmenu/captain_Mainmenu.tscn" id="4_koqhg"]
[ext_resource type="Script" uid="uid://c32e0jnqx0a3g" path="res://Script/script_mainmenu_horn.gd" id="5_df05h"]
[ext_resource type="AudioStream" uid="uid://dgc0nbiskb1kl" path="res://Audio/SoundEffect/371535__robinhood76__06934-distant-ship-horn.wav" id="6_8um5k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ghw46"]
size = Vector2(396.5, 450.5)

[sub_resource type="Curve" id="Curve_df05h"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_8um5k"]
colors = PackedColorArray(0.7529412, 0.7529412, 0.7529412, 1, 0.7529412, 0.7529412, 0.7529412, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xim88"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_koqhg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cmrfp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_loo7a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_if7li"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rrcx7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fh7cp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8e205"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7467j"]

[sub_resource type="Animation" id="Animation_8saeu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1069, 490)]
}

[sub_resource type="Animation" id="Animation_ghw46"]
resource_name = "ship_float"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1069, 490), Vector2(1069, 510), Vector2(1069, 490)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ghw46"]
_data = {
&"RESET": SubResource("Animation_8saeu"),
&"ship_float": SubResource("Animation_ghw46")
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_853f1"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_tt5f1")
initial_level_scene = ExtResource("2_ritqm")
level_choice_scene = ExtResource("3_aaq5r")

[node name="Background" type="Sprite2D" parent="."]
hframes = 6

[node name="Ship" type="Node2D" parent="."]
position = Vector2(1069, 490)
script = ExtResource("2_xim88")

[node name="ShipSprite" type="Sprite2D" parent="Ship"]
position = Vector2(0, -23)
texture = ExtResource("3_ghw46")

[node name="Captain" parent="Ship" instance=ExtResource("4_koqhg")]
position = Vector2(-89, 118)
scale = Vector2(0.745, 0.745)

[node name="Chimney" type="Node2D" parent="Ship"]
script = ExtResource("3_df05h")

[node name="ChimneySprite" type="Sprite2D" parent="Ship/Chimney"]
visible = false

[node name="ChimneyClickArea" type="Area2D" parent="Ship/Chimney"]
z_index = 10
position = Vector2(468, -70)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ship/Chimney/ChimneyClickArea"]
position = Vector2(123, 53)
shape = SubResource("RectangleShape2D_ghw46")

[node name="SmokeParticles" type="CPUParticles2D" parent="Ship/Chimney"]
position = Vector2(493, -278)
emitting = false
amount = 20
texture = ExtResource("4_8um5k")
lifetime = 2.0
one_shot = true
explosiveness = 0.8
direction = Vector2(0, -1)
gravity = Vector2(0, 0)
initial_velocity_min = 30.0
initial_velocity_max = 50.0
scale_amount_min = 0.5
scale_amount_curve = SubResource("Curve_df05h")
color = Color(0.7529412, 0.7529412, 0.7529412, 1)
color_ramp = SubResource("Gradient_8um5k")

[node name="Horn" type="Node2D" parent="Ship"]
script = ExtResource("5_df05h")

[node name="HornSprite" type="Sprite2D" parent="Ship/Horn"]
visible = false

[node name="HornButton" type="Button" parent="Ship/Horn"]
offset_left = 107.0
offset_top = -485.0
offset_right = 151.0
offset_bottom = -421.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_xim88")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_koqhg")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_cmrfp")
theme_override_styles/hover = SubResource("StyleBoxEmpty_loo7a")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_if7li")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_rrcx7")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_fh7cp")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8e205")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7467j")

[node name="HornSound" type="AudioStreamPlayer" parent="Ship/Horn"]
stream = ExtResource("6_8um5k")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Ship"]
libraries = {
&"": SubResource("AnimationLibrary_ghw46")
}

[node name="SkyAndSea" type="Node2D" parent="."]

[node name="Waves" type="AnimatedSprite2D" parent="SkyAndSea"]

[node name="Clouds" type="Sprite2D" parent="SkyAndSea"]

[node name="Seagulls" type="Node2D" parent="."]

[node name="Seagull1" type="AnimatedSprite2D" parent="Seagulls"]

[node name="Seagull2" type="AnimatedSprite2D" parent="Seagulls"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_853f1")
}

[node name="UIControl" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MenuVBoxContainer" type="VBoxContainer" parent="UIControl"]
layout_mode = 0
offset_left = 1456.0
offset_top = 720.0
offset_right = 1856.0
offset_bottom = 1077.0
theme_override_constants/separation = 12

[node name="StartButton" type="Button" parent="UIControl/MenuVBoxContainer"]
custom_minimum_size = Vector2(100, 72)
layout_mode = 2
text = "Start"

[node name="LevelChoiceButton" type="Button" parent="UIControl/MenuVBoxContainer"]
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
text = "Choice Level"

[node name="SettingButton" type="Button" parent="UIControl/MenuVBoxContainer"]
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
text = "Setting"

[node name="ExitButton" type="Button" parent="UIControl/MenuVBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
text = "Exit"

[node name="Label" type="Label" parent="UIControl/MenuVBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.3529412)
text = "Version 0.0.1"
horizontal_alignment = 2

[node name="NameLabel" type="Label" parent="UIControl"]
layout_mode = 0
offset_left = 882.0
offset_top = 75.0
offset_right = 1853.0
offset_bottom = 174.0
theme_override_font_sizes/font_size = 72
text = "WOWS_X_MiniGame_Project"
horizontal_alignment = 2

[connection signal="input_event" from="Ship/Chimney/ChimneyClickArea" to="Ship/Chimney" method="_on_chimney_click_area_input_event"]
[connection signal="button_down" from="Ship/Horn/HornButton" to="Ship/Horn" method="_on_button_button_down"]
[connection signal="button_up" from="Ship/Horn/HornButton" to="Ship/Horn" method="_on_button_button_up"]
[connection signal="pressed" from="UIControl/MenuVBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="UIControl/MenuVBoxContainer/LevelChoiceButton" to="." method="_on_level_choice_button_pressed"]
[connection signal="pressed" from="UIControl/MenuVBoxContainer/SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="UIControl/MenuVBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
